[package]
name = "more_portraits_in_japanese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
themelios.path = "../Aureole/themelios"
clap = { version = "4.2.1", features = ["derive"] }
regex = "1.7.0"
lazy_static = "1.4.0"
